Finished the Positions

--- a/project1/Index.html
+++ b/project1/Index.html
@@ -40,7 +40,11 @@ There are nine positions when it comes to the players on the baseball diamond. W
 	<li>First Baseman</li>
 	<li>Second Baseman</li>
 	<li>Third Baseman</li>
-		
+	<li>Shortstop</li>
+	<li>Left Fielder</li>
+	<li>Center Fielder</li>
+	<li>Right Fielder</li>
+</ol>
 	
 	
 	
