Added National League Teams

--- a/project1/Index.html
+++ b/project1/Index.html
@@ -9,7 +9,7 @@
 	<ul>
 		<li><a href="#rules">Rules</a></li>
 		<li><a href="#positions">Positions</a></li>
-		<li><a href="#Teams">Teams</a></li>
+		<li><a href="#teams">MLB Teams</a></li>
 		<li><a href="#images">Images</a></li>
 	</ul>
 	<p>Baseball is a bat-and-ball game played between two teams of nine players each who take turns batting and fielding.The offense attempts to score runs by hitting a ball thrown by the pitcher with a bat and moving counter-clockwise around four bases: first, second, third, and home. A run is scored when a player advances around the bases and returns to home plate.<br />
@@ -33,7 +33,8 @@ Any runners already on base may attempt to advance on batted balls that land, or
 <br />
 A pitch that is not hit into the field of play is called either a strike or a ball. A batter against whom three strikes are recorded strikes out. A batter against whom four balls are recorded is awarded a base on balls or walk, a free advance to first base. A batter may also freely advance to first base if the batter's body or uniform is struck by a pitch outside the strike zone, provided the batter does not swing and attempts to avoid being hit.</p>
 <h2 id="positions">Positions</h2>
-There are nine positions when it comes to the players on the baseball diamond. With each position there is a number associated with it. The list of positions is as follows:
+There are nine positions when it comes to the players on the baseball diamond. With each position there is also a number associated with each position.<br /> 
+The list of positions is as follows:
 <ol>
 	<li>Pitcher</li>
 	<li>Catcher</li>
@@ -45,7 +46,34 @@ There are nine positions when it comes to the players on the baseball diamond. W
 	<li>Center Fielder</li>
 	<li>Right Fielder</li>
 </ol>
-	
+<h2 id="Teams">MLB Teams</h2>
+<h3> National League</h3>
+<ul>
+	<li>NL East</li>
+		<ul>
+		<li>Atlanta Braves</li>
+		<li>Miami Marlins</li>
+		<li>New York Mets</li>	
+		<li>Philadelphia Phillies</li>
+		<li>Washington Nationals</li>
+		</ul>
+	<li>NL Central</li>
+		<ul>
+		<li>Chicago Cubs<li>
+		<li>Cincinnati Reds</li>
+		<li>Milwaukee Brewers</li>
+		<li>Pittsburgh Pirates</li>
+		<li>St. Louis Cardinals</li>
+		</ul>
+	<li>NL West Teams</li>
+		<ul>
+		<li>Arizona Diamondbacks</li>
+		<li>Colorado Rockies</li>
+		<li>Los Angeles Dodgers</li>
+		<li>San Diego Padres</li>
+		<li>San Francisco Giants</li>
+		</ul>
+	</ul>
 	
 	
 	
