Added American league teams

--- a/project1/Index.html
+++ b/project1/Index.html
@@ -59,7 +59,7 @@ The list of positions is as follows:
 		</ul>
 	<li>NL Central</li>
 		<ul>
-		<li>Chicago Cubs<li>
+		<li>Chicago Cubs</li>
 		<li>Cincinnati Reds</li>
 		<li>Milwaukee Brewers</li>
 		<li>Pittsburgh Pirates</li>
@@ -72,6 +72,32 @@ The list of positions is as follows:
 		<li>Los Angeles Dodgers</li>
 		<li>San Diego Padres</li>
 		<li>San Francisco Giants</li>
+		</ul>
+	</ul>
+<h3>American League</h3>
+	<li>AL East</li>
+		<ul>
+		<li>Baltimore Orioles</li>
+		<li>Boston Red Sox</li>
+		<li>New York Yankees</li>	
+		<li>Tampa Bay Rays</li>
+		<li>Toronto Blue Jays</li>
+		</ul>
+	<li>NA Central</li>
+		<ul>
+		<li>Chicago White Sox</li>
+		<li>Cleveland Indians</li>
+		<li>Detroit Tigers</li>
+		<li>kansas City Royals</li>
+		<li>Minnesota Twins</li>
+		</ul>
+	<li>NL West Teams</li>
+		<ul>
+		<li>Houston Astros</li>
+		<li>Anaheim Angels</li>
+		<li>Oakland Athletics</li>
+		<li>Seattle Mariners</li>
+		<li>Texas Rangers</li>
 		</ul>
 	</ul>
 	
