All teams added

--- a/project1/Index.html
+++ b/project1/Index.html
@@ -1,4 +1,4 @@
-<!DOCTYPRE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="utf-8"/>
@@ -16,7 +16,7 @@
 Players on the batting team take turns hitting against the pitcher of the fielding team, which tries to prevent runs by getting hitters out in any of several ways. A player on the batting team who reaches a base safely can later attempt to advance to subsequent bases during teammates' turns batting, such as on a hit or by other means. The teams switch between batting and fielding whenever the fielding team records three outs. One turn batting for both teams, beginning with the visiting team, constitutes an inning. A game comprises nine innings, and the team with the greater number of runs at the end of the game wins.<br />
 Evolving from older bat-and-ball games, an early form of baseball was being played in England by the mid-18th century. This game was brought by immigrants to North America, where the modern version developed. By the late 19th century, baseball was widely recognized as the national sport of the United States. Baseball is now popular in North America and parts of Central and South America and the Caribbean, East Asia, and Europe.</p>
 	<h2 id="rules">Rules</h2>
-	<p>A game is played between two teams, each comprising nine players, that take turns playing offense and defense. A pair of turns, one at bat and one in the field, by each team constitutes an inning. A game consists of nine innings. One team—customarily the visiting team—bats in the top, or first half, of every inning. The other team—customarily the home team—bats in the bottom, or second half, of every inning. The goal of the game is to score more runs than the other team. The players on the team at bat attempt to score runs by circling the four bases set at the corners of the baseball diamond. A player bats at home plate and must proceed counterclockwise to first base, second base, third base, and home in order to score a run. The team in the field attempts both to prevent runs from scoring and to record outs, which remove opposing players from offensive action until their turn in their team's batting order comes up again. When three outs are recorded, the teams switch roles for the next half-inning. If the score of the game is tied after nine innings, extra innings are played.<br />
+	<p>A game is played between two teams, each comprising nine players, that take turns playing offense and defense. A pair of turns, one at bat and one in the field, by each team constitutes an inning. A game consists of nine innings. One team—customarily the visiting team—bats in the top, or first half, of every inning. The other team—customarily the home team—bats in the bottom, or second half, of every inning. The goal of the game is to score more runs than the other team. The players on the team at bat attempt to score runs by circling the four bases set at the corners of the baseball diamond. A player bats at home plate and must proceed counterclockwise to first base, second base, third base, and home in order to score a run. The team in the field attempts both to prevent runs from scoring and to record outs, which remove opposing players from offensive action until their turn in their team's batting order comes up again. When three outs are recorded, the teams switch roles for the next half-inning. If the score of the game is tied after nine innings, extra innings are played.</p><br />
 <br />
 There are three basic tools of baseball: the ball, the bat, and the glove:
 <ul>
@@ -25,13 +25,14 @@ There are three basic tools of baseball: the ball, the bat, and the glove:
 <li>The glove is a fielding tool, made of padded leather with webbing between the fingers. As an aid in catching and holding onto the ball, different positions take different sizes and shapes.</li>
 </ul>
 
-At the beginning of each half-inning, the nine players on the fielding team arrange themselves around the field. One of them, the pitcher, stands on the pitcher's mound. The pitcher begins the pitching delivery with one foot on the rubber, pushing off it to gain velocity when throwing toward home plate. Another player, the catcher, squats on the far side of home plate, facing the pitcher. The rest of the team faces home plate, typically arranged as four infielders—who set up along or within a few yards outside the imaginary lines between first, second, and third base—and three outfielders. In the standard arrangement, there is a first baseman positioned several steps to the left of first base, a second baseman to the right of second base, a shortstop to the left of second base, and a third baseman to the right of third base. The basic outfield positions are left fielder, center fielder, and right fielder.<br />
+<p>At the beginning of each half-inning, the nine players on the fielding team arrange themselves around the field. One of them, the pitcher, stands on the pitcher's mound. The pitcher begins the pitching delivery with one foot on the rubber, pushing off it to gain velocity when throwing toward home plate. Another player, the catcher, squats on the far side of home plate, facing the pitcher. The rest of the team faces home plate, typically arranged as four infielders—who set up along or within a few yards outside the imaginary lines between first, second, and third base—and three outfielders. In the standard arrangement, there is a first baseman positioned several steps to the left of first base, a second baseman to the right of second base, a shortstop to the left of second base, and a third baseman to the right of third base. The basic outfield positions are left fielder, center fielder, and right fielder.<br />
 <br /> 
 Play starts with a batter standing at home plate, holding a bat. The batter waits for the pitcher to pitch the ball toward home plate, and attempts to hit the ball with the bat. The catcher catches pitches that the batter does not hit—as a result of either electing not to swing or failing to connect—and returns them to the pitcher. A batter who hits the ball into the field of play must begin running toward first base, at which point the player is referred to as a runner. A batter who reaches first base without being put out is said to be safe and is now on base. A batter-runner may choose to remain at first base or attempt to advance to second base or however far the player believes can be reached safely. A player who reaches base despite proper play by the fielders has recorded a hit. A player who reaches first base safely on a hit is credited with a single. If a player makes it to second base safely as a direct result of a hit, it is a double; third base, a triple. If the ball is hit in the air within the foul lines over the entire outfield (and outfield fence, if there is one), it is a home run: the batter and any runners on base may all freely circle the bases, each scoring a run. This is the most desirable result for the batter. A player who reaches base due to a fielding mistake is not credited with a hit—instead, the responsible fielder is charged with an error.<br />
 <br />
 Any runners already on base may attempt to advance on batted balls that land, or contact the ground, in fair territory, before or after the ball lands. A runner on first base must attempt to advance if a ball lands in play. If a ball hit into play rolls foul before passing through the infield, it becomes dead and any runners must return to the base they were at when the play began. If the ball is hit in the air and caught before it lands, the batter has flied out and any runners on base may attempt to advance only if they tag up or touch the base they were at when the play began, as or after the ball is caught. Runners may also attempt to advance to the next base while the pitcher is in the process of delivering the ball to home plate—a successful effort is a stolen base.<br />
 <br />
-A pitch that is not hit into the field of play is called either a strike or a ball. A batter against whom three strikes are recorded strikes out. A batter against whom four balls are recorded is awarded a base on balls or walk, a free advance to first base. A batter may also freely advance to first base if the batter's body or uniform is struck by a pitch outside the strike zone, provided the batter does not swing and attempts to avoid being hit.</p>
+A pitch that is not hit into the field of play is called either a strike or a ball. A batter against whom three strikes are recorded strikes out. A batter against whom four balls are recorded is awarded a base on balls or walk, a free advance to first base. A batter may also freely advance to first base if the batter's body or uniform is struck by a pitch outside the strike zone, provided the batter does not swing and attempts to avoid being hit.
+</p>
 <h2 id="positions">Positions</h2>
 There are nine positions when it comes to the players on the baseball diamond. With each position there is also a number associated with each position.<br /> 
 The list of positions is as follows:
@@ -46,10 +47,10 @@ The list of positions is as follows:
 	<li>Center Fielder</li>
 	<li>Right Fielder</li>
 </ol>
-<h2 id="Teams">MLB Teams</h2>
+<h2 id="teams">MLB Teams</h2>
 <h3> National League</h3>
 <ul>
-	<li>NL East</li>
+	<li>NL East
 		<ul>
 		<li>Atlanta Braves</li>
 		<li>Miami Marlins</li>
@@ -57,7 +58,8 @@ The list of positions is as follows:
 		<li>Philadelphia Phillies</li>
 		<li>Washington Nationals</li>
 		</ul>
-	<li>NL Central</li>
+	</li>
+	<li>NL Central
 		<ul>
 		<li>Chicago Cubs</li>
 		<li>Cincinnati Reds</li>
@@ -65,7 +67,8 @@ The list of positions is as follows:
 		<li>Pittsburgh Pirates</li>
 		<li>St. Louis Cardinals</li>
 		</ul>
-	<li>NL West Teams</li>
+	</li>
+	<li>NL West Teams
 		<ul>
 		<li>Arizona Diamondbacks</li>
 		<li>Colorado Rockies</li>
@@ -73,10 +76,11 @@ The list of positions is as follows:
 		<li>San Diego Padres</li>
 		<li>San Francisco Giants</li>
 		</ul>
-	</ul>
+	</li>
+</ul>
 <h3>American League</h3>
 <ul>
-	<li>AL East</li>
+	<li>AL East
 		<ul>
 		<li>Baltimore Orioles</li>
 		<li>Boston Red Sox</li>
@@ -84,7 +88,8 @@ The list of positions is as follows:
 		<li>Tampa Bay Rays</li>
 		<li>Toronto Blue Jays</li>
 		</ul>
-	<li>NA Central</li>
+	</li>
+	<li>NA Central
 		<ul>
 		<li>Chicago White Sox</li>
 		<li>Cleveland Indians</li>
@@ -92,7 +97,8 @@ The list of positions is as follows:
 		<li>kansas City Royals</li>
 		<li>Minnesota Twins</li>
 		</ul>
-	<li>NL West Teams</li>
+	</li>
+	<li>NL West Teams
 		<ul>
 		<li>Houston Astros</li>
 		<li>Anaheim Angels</li>
@@ -100,8 +106,9 @@ The list of positions is as follows:
 		<li>Seattle Mariners</li>
 		<li>Texas Rangers</li>
 		</ul>
-	</ul>
-	
+	</li>
+</ul>
+<h2 id="images">Images</h2>	
 	
 	
 	
