All Images added

--- a/project1/Index.html
+++ b/project1/Index.html
@@ -109,6 +109,26 @@ The list of positions is as follows:
 	</li>
 </ul>
 <h2 id="images">Images</h2>	
+<figure>
+	<img src="images/baseball_field.jpg"
+		alt="Picture of a baseball field from above." />
+		<figcaption>Here is an aerial view of a baseball field.</figcaption>
+</figure>
+<figure>
+	<img src="images/baseballglove.jpg"
+		alt="Picture of a baseball and glove" />
+		<figcaption>Two of the main tools for baseball are the ball itself and the baseball glove.</figcaption>
+</figure>
+<figure>
+	<img src="images/baseball.jpg"
+		alt="Image of a baseball on its own." />
+		<figcaption>Picture a baseball</figcaption>
+</figure>
+<figure>
+	<img src="images/atbat.jpg"
+		alt="Baseball player stands ready to hit the next pitch." />
+		<figcaption>Image of a player standing at the plate ready to hit.</figcaption>
+</figure>
 	
 	
 	
